# gasbench

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ONNX.md  Safetensors.md
src/gasbench/: __init__.py  benchmark.py  cli.py  config.py  constants.py  download_manager.py  logger.py
src/gasbench/benchmarks/: __init__.py  audio_bench.py  aug_cache.py  common.py  feature_gates.py  image_bench.py  metrics.py  recording.py  video_bench.py
src/gasbench/benchmarks/utils/: __init__.py  custom_model_loader.py  inference.py  metrics.py  misclassifications.py  pytorch_session.py
src/gasbench/dataset/: __init__.py  cache.py  cache_policy.py  config.py  download.py  gasstation_utils.py  iterator.py
src/gasbench/dataset/configs/: audio-datasets-2.yaml  audio_datasets.yaml  benchmark_datasets.yaml  eval_datasets.yaml  image_datasets.yaml  image_human_datasets.yaml  real_audio.yaml  real_images.yaml  real_videos.yaml  synthetic_audio.yaml  synthetic_images.yaml  synthetic_videos.yaml  video_datasets.yaml  video_human_datasets.yaml  waspi_audiodataset.yaml  waspi_imagedataset.yaml  waspi_videodataset.yaml  yanez_datasets.yaml
src/gasbench/dataset/configs/extras/: video_human_datasets_extra_real.yaml  video_human_datasets_unreleased.yaml
src/gasbench/dataset/download/: __init__.py  cache_io.py  constants.py  core.py  extract.py  fetch.py  listing.py
src/gasbench/dataset/utils/: __init__.py  gasstation_utils.py  metadata_utils.py  s3_utils.py
src/gasbench/model/: __init__.py  inference.py
src/gasbench/processing/: __init__.py  archive.py  media.py  pipeline.py  preprocess_audio.py  transforms.py
src/gasbench/utils/: __init__.py  parallel_preprocessing.py  resource_optimization.py
tests/: README.md  __init__.py
tests/fixtures/: test_audio.parquet  test_image_dual.parquet  test_image_single.parquet  test_images.tar  test_video.parquet
tests/integration/: __init__.py  test_parquet_processing.py
tests/smoke/: __init__.py  test_dataset_connectivity.py
tests/unit/: __init__.py  test_column_detection.py  test_config_loading.py  test_transforms_determinism.py  test_weighted_metrics.py
