[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gasbench"
version = "0.1.0"
description = "GASBench - ML model benchmark evaluation package"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "opencv-python-headless>=4.8.0",
    "scikit-learn>=1.3.0",
    "onnxruntime-gpu>=1.22.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pyarrow>=10.0.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.0",
    "huggingface-hub>=0.19.0",
    "datasets>=4.0.0",
    "modelscope>=1.11.0",
    "scipy>=1.10.0",
    "psutil==7.1.2",
    "rich==14.2.0"
]

[project.optional-dependencies]
cpu = [
    "onnxruntime>=1.22.0",
]

[project.scripts]
gasbench = "gasbench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
"gasbench.dataset" = ["configs/*.yaml"]

[tool.black]
line-length = 88
target-version = ['py310']
