[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gasbench"
version = "0.7.0"
description = "GASBench - ML model benchmark evaluation package"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy==2.4.2",
    "pillow==12.1.1",
    "opencv-python-headless==4.13.0.92",
    "onnxruntime-gpu==1.24.2; platform_system == 'Linux'",
    "onnxruntime>=1.22.0; platform_system == 'Darwin'",
    "onnxruntime>=1.22.0; platform_system == 'Windows'",
    "decord==0.6.0; platform_system != 'Darwin'",
    "scikit-learn==1.8.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "torchaudio==2.8.0",
    "torchcodec==0.10.0",
    "transformers==5.2.0",
    "safetensors==0.7.0",
    "pyarrow==24.0.0",
    "pandas==3.0.2",
    "requests==2.32.5",
    "pyyaml==6.0.3",
    "huggingface-hub==1.5.0",
    "datasets==4.8.5",
    "modelscope==1.36.3",
    "scipy==1.17.1",
    "psutil==7.1.2",
    "rich==14.2.0",
    "soundfile==0.13.1",
    "timm==1.0.25",
    "scikit-image==0.26.0",
    "fvcore==0.1.5.post20221221",
    "einops==0.8.2",
    "open-clip-torch==3.3.0",
]

[project.scripts]
gasbench = "gasbench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
"gasbench.dataset" = ["configs/*.yaml"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: marks tests as slow (network I/O)"]
filterwarnings = ["ignore::DeprecationWarning:pkg_resources.*"]
